[gd_scene load_steps=2 format=3 uid="uid://dialogue_box_001"]

[ext_resource type="Script" path="res://game/features/ui/dialogue_box.gd" id="1_script"]

[node name="DialogueBox" type="Control" groups=["dialogue_ui"]]
script = ExtResource("1_script")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -260.0
grow_horizontal = 2
grow_vertical = 0

[node name="SpeakerName" type="Label" parent="Panel"]
anchor_right = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 30.0
text = "Circe"

[node name="Text" type="Label" parent="Panel"]
anchor_right = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = 150.0
text = "Welcome to my garden, traveler."

[node name="Choices" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
offset_left = 20.0
offset_top = 160.0
offset_right = -20.0
offset_bottom = 220.0
alignment = 1

[node name="ContinuePrompt" type="Label" parent="Panel"]
anchor_right = 1.0
offset_left = 20.0
offset_top = 220.0
offset_right = -20.0
offset_bottom = 245.0
text = "Press E to continue..."
horizontal_alignment = 2
